@@ -12,7 +12,7 @@ COM_MODULES_BATCH_POSITION_LABEL="Set Position"
 COM_MODULES_BATCH_POSITION_NOCHANGE="Keep original Position"
 COM_MODULES_BATCH_POSITION_NOPOSITION="No Module Position"
 COM_MODULES_BATCH_OPTIONS="Batch process the selected modules"
-COM_MODULES_BATCH_TIP="If choosing to copy a module, any other actions selected will be applied to the copied module. Otherwise, all actions are applied to the selected module."
+COM_MODULES_BATCH_TIP="If choosing to copy a module, any other actions selected will be applied to the copied module. Otherwise, all actions are applied to the selected module. When copying and not changing position, it is nevertheless necessary to select 'Keep Original Position' in the dropdown"
 COM_MODULES_CHANGE_POSITION_BUTTON="Select position"
 COM_MODULES_CHANGE_POSITION_TITLE="Change position"
 COM_MODULES_CONFIGURATION="Module Manager Options"
